Revert to coat html and stylesheet from yesterday to fix broken layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,6 @@ a {
     grid-template-columns: 3fr;
     grid-template-rows: 3fr 1fr;
     padding: 24px 18px 30px 18px;
-    width: 95vw;
 }
 
 .garment-grid {
@@ -292,41 +291,58 @@ a {
 /* \\---  Long Tshirt specific styles  ---/////////////////////// */
 
 #sleeve-tile-left-longt {
+    background-color: rgba(206, 206, 206, 0.815);
+    background-color:rgba(184, 179, 189, 0.808);
     background-color:rgba(218, 218, 218, 0.808);
 }
 
 #sleeve-tile-right-longt {
+    background-color: rgba(168, 158, 175, 0.76);
+    background-color: rgba(150, 148, 150, 0.76);
     background-color:rgba(218, 218, 218, 0.808);
 }
 
 #neck-tile-longt,
 #body-tile-longt {
-   
+    background-color: rgba(150, 148, 150, 0.76);
+    background-color: rgba(168, 158, 175, 0.76);
+    background-color:rgba(184, 179, 189, 0.808);
     background-color:rgba(184, 179, 179, 0.808);
 }
+
+/* .longt-grid-bg {
+    display: grid;
+    grid-column: 1 / 4;
+    grid-row: 1 / 4;
+    z-index: 40;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+} */
+
+/* #grid-makeuse-long-t img {} */
 
 /* \\---  Coat specific styles  ---/////////////////////// */
 
 #neck-tile-coat,
 #body-tile-coat {
-    background-color: rgba(165, 152, 128, 0.733);
+    background-color: #888;
+    background-color: #d46300;
+    background-color: #d3711cce;
     background-color: rgba(136, 136, 136, 0.733);
-    background-color: rgba(165, 152, 128, 0.733);
 }
 
 #sleeve-tile-left-coat {
     background-color: #d3711cce;
-    background-color: rgba(146, 133, 133, 0.733);
-    background-color: rgba(165, 152, 128, 0.733);
     background-color: rgba(136, 136, 136, 0.733);
+    background-color: rgba(146, 133, 133, 0.733);
 }
 
 #sleeve-tile-right-coat {
     background-color: #d46300;
     background-color: #d46300;
     background-color: rgba(136, 136, 136, 0.733);
-    background-color: rgba(146, 133, 133, 0.733);
-    
+    background-color: rgba(165, 152, 128, 0.733);
 }
 
 /* \\---  Garment Grid-Tile Sequencing  ---/////////////////////// */
@@ -380,10 +396,6 @@ a {
     color: #d46300;
 }
 
-.dimensions {
-    text-align: right;
-}
-
 /* .garment-length {
     display: grid;
     grid-row: 2;
@@ -409,20 +421,20 @@ input {
 
 /* \\---  Pattern Template Downloads  ---////////////////////////////// */
 
-.downloadwrapper .thumb-flex-wrap > .row {
+.downloadwrapper > .row {
     padding: none;
     justify-content: center;
     display: flex;
     align-content: center;
-    width: 100vw;
+    max-width: 100vw;
 }
 
-.downloadwrapper .thumb-flex-wrap {
+.downloadwrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 0 auto 12px;
-    width: 95vw;
+    max-width: 95vw;
 }
 
 .fabricsize {
@@ -447,6 +459,20 @@ input {
     padding: none;
     transition: ease-in-out 50ms;
 }
+
+
+/* .downloadwrapper {
+    padding: 0;
+    display: grid;
+    grid-gap: 24px;
+    grid-template-columns: 45% 45%;
+    grid-template-rows: auto;
+    justify-content: space-between;
+    align-content: flex-start;
+    max-height: 578px;
+    width: 100%;
+    margin: 22px auto 140px auto;
+} */
 
 .pattern-thumb {
     width: 100%;
@@ -573,6 +599,7 @@ h5 {
         margin: auto auto auto 0;
     }
     
+    /* .garment-grid { */
     #croptshirt-grid,
     #longtshirt-grid,
     #coat-grid {
@@ -589,77 +616,18 @@ h5 {
 
 @media (min-width: 768px) {
     
-
-    .grid-outer-wrapper {
-        display: grid;
-        grid-template-columns: 512px 102.4px 409.6px;
-        grid-template-rows: 512px;
-        margin: auto auto;
-        max-height: 512px;
-        width: 1024px;
-        padding: 0;
-    }
-    
+    /* #garment-grid-wrapper { */
     .garment-grid {
-        grid-column: 1;
-        grid-row: 1;
-        display: grid;
-        max-width: 550px;
-        max-height: 550px;
-        grid-template-columns: 33.33% 33.33% 33.33%;
-        grid-template-rows: 33.33% 66.66%;
-        overflow: hidden;
+        grid-column: 1 / 3;
+        grid-row: 1 / 3;
     }
 
-    /* ------------- reworking sizing info grid layout ----------- */
-
-    #sizing-data {
-        display: grid;
-        grid-column: 3;
-        grid-row: 1;
-    }
-
-    #grid-intro {
-        display: grid;
-        grid-column: 3;
-        grid-row: 1;
-    }
-    
-    #grid-intro > p {
-        color: #5c5c5c;
-    }
-    
-    /* .garment-sizing {
-        display: grid;
-        justify-content: space-evenly;
-    } */
-    
-    .sizing-info {
-        display: grid;
-        grid-column: 3 / 4;
-        grid-row: 1;
-        width: 100%;
-        text-align: center;
-    }
-    
-    .sizing-info p {
-        color:#4a494a;
-        font-weight: 500;
-        font-size: 14px;
-        text-align: left;
-        width: 100%;
-    }
-
-    /* ---------------------------------------------------------------- */
-
-
-
-    /* .template-intro {
+    .template-intro {
         display: grid;
         grid-column: 1 / 3;
-        grid-row: 1;
+        grid-row: 4;
         margin: 0;
-    } */
+    }
 
     .navbar-custom {
         max-width: 930px;
@@ -670,49 +638,38 @@ h5 {
         margin: 0 auto;
     }
 
-    .downloadwrapper {
+    /* .downloadwrapper {
+        padding: 0;
         display: grid;
-        grid-column: 2;
-        grid-row: 1;
-        /* grid-gap: 20px; */
-        /* grid-template-columns: 80px;
-        grid-template-rows: 80px 80px 80px 80px 80px; */
-        justify-content: space-evenly;
-        align-content: space-between;
-        width: 102.4px;
-        height: 512px;
-        margin: 0;
-        padding: 0;
-        /* border: 1px solid orange; */
-    }
+        grid-gap: 24px;
+        grid-template-columns: 45% 45%;
+        grid-template-rows: auto;
+        justify-content: space-between;
+        align-content: flex-start;
+        max-height: 578px;
+        width: 100%;
+        margin: 22px auto 140px auto;
+    } */
 
-    .downloadwrapper .thumb-flex-wrap {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-content: space-between;
-        width: 102.4px;
-        height: 512px;
+    .downloadwrapper {
         padding: 0;
-        justify-items: center;
-    }
-
-    .pattern-link {
-        padding: 0;
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 110px 110px;
+        grid-template-rows: 110px 110px 110px 110px 110px;
+        justify-content: right;
+        align-content: flex-start;
+        max-height: 578px;
+        width: 100%;
+        margin: 22px 24px auto auto;
     }
 
     .pattern-thumb {
         width: 100%;
-        align-content: center;
-        max-height: fit-content;
-        width: 80%;
-        padding: 5px 0;
-        margin: auto;
-    }
-
-    /* .pattern-thumb a {
+        justify-content: right;
+        max-height: 110px;
         padding: 0;
-    } */
+    }
 
     .pattern-hover-overlay > img {
         background-color: #b7b3a7;
@@ -723,8 +680,8 @@ h5 {
     .body-over,
     .sleeve-left-over,
     .sleeve-right-over {
-        grid-column: 3 / 4;
-        grid-row: 1 / 3;
+        grid-column: 1 / 3;
+        grid-row: 3 / 5;
     }
 
     .garment-tile:hover {
